Made the footer responsive. Had to ensure it didn't break in other places as a result as well. -DJG

--- a/public/js/p3/resources/cepi.css
+++ b/public/js/p3/resources/cepi.css
@@ -568,6 +568,26 @@
   height: 240px;
 }
 
+#footer-dxkb {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
+    text-align: left;
+    float: left;
+    padding-left: 20px;
+}
+
+#footer-logo {
+  display: inline-block;
+  width: fit-content;
+  padding: 0 10px 0 0;
+}
+
+#footer-logo .bv-brc-logo {
+  height: 64px;
+}
+
 #bv-brc-footer-container {
   /* width: 80%; */
   margin: 0 auto;
@@ -903,6 +923,14 @@
   text-align: left;
   width: 100%;
   font-size: 14px;
+}
+
+.footer-column h3 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--cepi-yellow);
 }
 
 .footer-column h3 a {
@@ -1743,4 +1771,53 @@ pre.bv-brc-code-block button:active {
     margin: auto;
     font-size:unset;
   }
+
+  #bv-brc-footer {
+    height: auto;
+  }
+
+  #bv-brc-footer-container {
+    display: block;
+  }
+
+  #footer-logo {
+    display: inline-block;
+    width: fit-content;
+    padding: 0 10px 0 0;
+    vertical-align: top;
+  }
+
+  #footer-logo .bv-brc-logo {
+    height: 35px;
+  }
+
+  #footer-byline {
+    display: inline-block;
+    width: 70%;
+  }
+
+  #footer-dxkb {
+    display: inline-block;
+  }
+
+  .footer-column {
+    padding-left: 10px;
+    width: 20%;
+    font-size: 10px;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .footer-column h3 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--cepi-yellow);
+  }
+
+  .footer-link {
+    display: block;
+  }
+
 }
